# aoc-2020

./: Cargo.toml
benches/: my_benchmark.rs
src/: main.rs
src/challenges/: day1.rs  day2.rs  day3.rs  day4.rs  utils.rs
