[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Matt <matthieu.zandecki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
bit-vec = "0.6.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
