[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Matt <matthieu.zandecki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
bit-vec = "0.6.2"
# bitvec = "0.17.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies.bitvec]
git = "https://github.com/myrrlyn/bitvec.git"
features = [
  "alloc",
  "atomic",
  # "serde",
  "std",
]